# PyWeb20_HW_13

hw_13_env/: .gitignore  README.md  docker-compose.yaml  image.py  main.py  pyproject.toml  test.db
hw_13_env/docs/: conf.py  index.rst
hw_13_env/migrations/versions/: 9b6085b02cc9_update_models.py  9faed658fdd3_init.py
hw_13_env/src/conf/: messages.py
hw_13_env/src/database/: db.py
hw_13_env/src/entity/: models.py
hw_13_env/src/repository/: todos.py  users.py
hw_13_env/src/routes/: auth.py  todos.py  users.py
hw_13_env/src/schemas/: user.py
hw_13_env/src/services/: auth.py  email.py  roles.py
hw_13_env/src/services/templates/: mail.html
hw_13_env/tests/: conftest.py  test_auth.py  test_todos.py  test_users.py
