[tool.poetry]
name = "hw-13-env"
version = "0.1.0"
description = ""
authors = ["chabanchuk <145770156+chabanchuk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
pydantic = ">=2.0,<3.0"
email-validator = ">=2.0,<3.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
libgravatar = "^1.0.4"
fastapi-mail = ">=1.4.1,<1.5.0"
bcrypt = "^4.1.3"
pillow = "^10.3.0"
pytest = "^8.2.0"



[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
